[gd_scene load_steps=2 format=2]

[ext_resource path="res://shared/effects/shaking.gd" type="Script" id=1]

[node name="shaking" type="Node2D"]

script = ExtResource( 1 )
magnitude = 10

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Material", "Offset", "Pause", "Smoothing", "Transform", "Visibility", "Z Index" ]

[node name="shaking_interval" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false

[node name="stop_shaking" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[connection signal="timeout" from="shaking_interval" to="." method="_on_shaking_interval_timeout"]

[connection signal="timeout" from="stop_shaking" to="." method="_on_stop_shaking_timeout"]


